k8s/components/apps/continuous-delivery/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: "dummy-argocd.example.com" # This will be patched by the overlay
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
